Add experience and eld cert

--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
                     <div id="education">
                         <table>
                             <tr class="education-table"><td><span class="ed-degree"><a id="deckhand_cv" href="./rpcv.pdf" target="blank">Deckhand CV (pdf)</a></span></td>
-                                <tr class="education-table"><td><span class="ed-degree"><a id="stcw" href="./stcw.pdf" target="blank">STCW 2010 (pdf)</a></span></td>
-                                    <tr class="education-table"><td><span class="ed-degree"><a id="eng1" href="./eng1.pdf" target="blank">MCA ENG1 (pdf)</a></span></td>
+                            <tr class="education-table"><td><span class="ed-degree"><a id="eld" href="./eld.pdf" target="blank">Entry Level Deck Week (pdf)</a></span></td>
+                            <tr class="education-table"><td><span class="ed-degree"><a id="stcw" href="./stcw.pdf" target="blank">STCW 2010 (pdf)</a></span></td>
+                            <tr class="education-table"><td><span class="ed-degree"><a id="eng1" href="./eng1.pdf" target="blank">MCA ENG1 (pdf)</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree">PADI Open Water Diver</span></td>
                             <tr class="education-table"><td><span class="ed-degree">ASE Certificate</span></td>
                             <tr class="education-table"><td><span class="ed-degree">Red Cross First Aid Certified</span></td>
@@ -183,10 +184,27 @@
                     <span id="job-history-subheader">Sorted by start date, most recent first. May include volunteer positions and professional associations as noted. All references ok to contact.</span>
                     <!-- <span id="job-filter-text">Current Filter: *Custom*</span> -->
                     <div class="job-entry">
+                        <span class="job-title">First Mate</span>
+                        <span class="job-employer">Sunseeker - Full Circle 92ft</span>
+                        <span class="job-employer-website"><a href="https://www.superyachttimes.com/yachts/full-circle-28m" target="_blank">https://www.superyachttimes.com/yachts/full-circle-28m</a></span>
+                        <span class="job-date">Mar 2021 - Apr 2021</span>
+                        <span class="job-description">First Mate on a 1 month trip to Harbor Island, Bahamas. <br> Docking, Fenders, lines. Full wash-downs, Hand waxing and detailing. Apply Semco on teak. Tender operations and maintenance. Interior A/C system + chiller maintnenance.</span>
+                        <span class="job-reference">Glenn Markus, Yacht owner. Cell (954) 868-3726. <a href="mailto:markus02@bellsouth.net">markus02@bellsouth.net</a></span>
+                        <span class="job-reference">Alana Markus, Yacht owner. Cell (954) 868-3727.</span>
+                    </div>
+                    <div class="job-entry">
+                        <span class="job-title">Deckhand - Delivery</span>
+                        <span class="job-employer">Sunreef - Obsession 74ft</span>
+                        <span class="job-employer-website"><a href="https://www.sunreef-yachts.com/en/launched/sunreef-74-obsession" target="_blank">https://www.sunreef-yachts.com/sunreef-74-obsession</a></span>
+                        <span class="job-date">Feb 5 2021</span>
+                        <span class="job-description">Deckhand aboard a catamaran performing a delivery from Rybovich Riviera Beach to Pier Sixty-Six Marina. Handle lines and fenders, general engine watch, rinse-down.</span>
+                        <span class="job-reference">Captain Tim. Cell (954) 612-2809.
+                    </div>
+                    <div class="job-entry">
                         <span class="job-title">Refit Crew</span>
                         <span class="job-employer">Trinity Yachts - Nina Lu 141ft</span>
                         <span class="job-employer-website"><a href="https://yachtharbour.com/yacht/waku-2749" target="_blank">yachtharbour.com/yacht/waku</a></span>
-                        <span class="job-date">Sep 2020 - Oct 2020</span>
+                        <span class="job-date">Sep 2020 - Mar 2021</span>
                         <span class="job-description">Engine room full detail, paint lazarette, install insulation, install plumbing in galley, marble and stone installaion.</span>
                         <span class="job-reference">Julianne Hammond, Co-owner of refit team. Cell (305) 304-6320. </span>
                         <!-- <a href="mailto:kcooper@snelsonco.com">kcooper@snelsonco.com</a> -->
