add pbl2 license to website and update cv

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                     <div id="education">
                         <table>
                             <tr class="education-table"><td><span class="ed-degree"><a id="deckhand_cv" href="./rpcv.pdf" target="blank">Deckhand CV (pdf)</a></span></td>
+                            <tr class="education-table"><td><span class="ed-degree"><a id="pbl2" href="./pbl2.pdf" target="blank">Powerboat Handling (pdf)</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="eld" href="./eld.pdf" target="blank">Entry Level Deck Week (pdf)</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="stcw" href="./stcw.pdf" target="blank">STCW 2010 (pdf)</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="eng1" href="./eng1.pdf" target="blank">MCA ENG1 (pdf)</a></span></td>
