--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
                     <div id="education">
                         <table>
                             <tr class="education-table"><td><span class="ed-degree"><a id="deckhand_cv" href="./rpcv.pdf" target="blank">Deckhand CV (pdf)</a></span></td>
-                            <tr class="education-table"><td><span class="ed-degree"><a id="pbl2" href="./pbl2.pdf" target="blank">Powerboat Handling (pdf)</a></span></td>
-                            <tr class="education-table"><td><span class="ed-degree"><a id="eld" href="./eld.pdf" target="blank">Entry Level Deck Week (pdf)</a></span></td>
+                            <tr class="education-table"><td><span class="ed-degree"><a id="pbl2" href="./pbl2.pdf" target="blank" title="PBL2 License Card (PDF)">Powerboat Handling</a></span></td>
+                            <tr class="education-table"><td><span class="ed-degree"><a id="eld" href="./eld.pdf" target="blank" title="ELD Certificate (PDF)">Entry Level Deck Week</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="stcw" href="./stcw.pdf" target="blank">STCW 2010 (pdf)</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="eng1" href="./eng1.pdf" target="blank">MCA ENG1 (pdf)</a></span></td>
-                            <tr class="education-table"><td><span class="ed-degree">PADI Open Water Diver</span></td>
+                            <tr class="education-table"><td><span class="ed-degree"><a id="padi_ow" href="./padi_ow.pdf" target="blank" title="ID card (PDF)">PADI Open Water Diver</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree">ASE Certificate</span></td>
                             <tr class="education-table"><td><span class="ed-degree">Red Cross First Aid Certified</span></td>
             
