--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                 </div>
                 
             <h1>Certification</h1>
-            <div class="expandable-section" id="history">
-                <div class="expandable-section-clicktoexpand" id="hidden-inline">Click to expand...</div>
-                <div class="expandable-section-expandedtext" id="expanded">
+            <!-- <div class="expandable-section" id="history"> -->
+                <!-- <div class="expandable-section-clicktoexpand" id="hidden-inline">Click to expand...</div> -->
+                <!-- <div class="expandable-section-expandedtext" id="expanded"> -->
                     <div id="education">
                         <table>
                             <tr class="education-table"><td><span class="ed-degree"><a id="deckhand_cv" href="./rpcv.pdf" target="blank">Deckhand CV (pdf)</a></span></td>
@@ -175,8 +175,8 @@
                             <tr class="education-table"><td><span class="ed-degree">Red Cross First Aid Certified</span></td>
             
                         </table>
-                    </div>
-                </div>
+                    <!-- </div> -->
+                <!-- </div> -->
             </div>
             <h1>Work History</h1>
             <div class="expandable-section" id="history">
