--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <!-- <div class="expandable-section-clicktoexpand" id="hidden-inline">Click to expand...</div> -->
                 <!-- <div class="expandable-section-expandedtext" id="expanded"> -->
                     <div id="education">
-                        <table>AEC%202.pdf
+                        <table>
                             <tr class="education-table"><td><span class="ed-degree"><a id="2ndEng_cv" href="./rpcv.pdf" target="blank">2nd Engineer CV (pdf)</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="AEC-2" href="./AEC%20@.pdf" target="blank" title="AEC 2 Certificate (PDF)">Approved Engine Course 2</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="AEC-1" href="./AEC1.pdf" target="blank" title="AEC 1 Certificate (PDF)">Approved Engine Course 1</a></span></td>
