--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div id="education">
                         <table>
                             <tr class="education-table"><td><span class="ed-degree"><a id="2ndEng_cv" href="./rpcv.pdf" target="blank">2nd Engineer CV (pdf)</a></span></td>
-                            <tr class="education-table"><td><span class="ed-degree"><a id="AEC-2" href="./AEC%20@.pdf" target="blank" title="AEC 2 Certificate (PDF)">Approved Engine Course 2</a></span></td>
+                            <tr class="education-table"><td><span class="ed-degree"><a id="AEC-2" href="./AEC%202.pdf" target="blank" title="AEC 2 Certificate (PDF)">Approved Engine Course 2</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="AEC-1" href="./AEC1.pdf" target="blank" title="AEC 1 Certificate (PDF)">Approved Engine Course 1</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="pbl2" href="./pbl2.pdf" target="blank" title="PBL2 License Card (PDF)">Powerboat Handling</a></span></td>
                             <tr class="education-table"><td><span class="ed-degree"><a id="eld" href="./eld.pdf" target="blank" title="ELD Certificate (PDF)">Entry Level Deck Week</a></span></td>
