add p5 projects to projects timeline

--- a/index.html
+++ b/index.html
@@ -402,6 +402,28 @@
                         </li>
                       </ul> -->
 
+                    <div class="project">
+                        <div class="project-title">Tetris!</div>
+                        <div id="project-name" class="project-name">Play Tetris 4 made in JavaScript</div>
+                        <div id="expanded" class="project-description description-text">A project I made on my laptop. Tetris, the original block puzzle game, but made by me. I used my knowledge of graphical programming and javascript and combined that inside a fantastic coding playground p5. Using the tools of the p5 library I was able to code from scratch and JavaScript a working replica of Tetris that you can play in any web browser (that supports p5's coding environment).</div>
+                        <!-- <div id="expanded" class="project-description description-text">Total working time: 1 week</div> -->
+                        <div id="project-tags" class="project-tags"><span class="proj-tagsel">Computer</span>, <span class="proj-tagsel">Recreational</span></div>
+                        <div align="right" class="project-bottom-container">
+                            <div class="project-url"><a href="https://github.com/rpeepz/p5js_Tetris?tab=readme-ov-file#p5js_tetris">p5 Tetris README/</a></div>
+                            <div class="project-date">June 2023</div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project-title">Connect 4</div>
+                        <div id="project-name" class="project-name">Play Connect 4 made in JavaScript</div>
+                        <div id="expanded" class="project-description description-text">A project I made on my laptop. Connect 4, the classic kids game, but made by me. I used my knowledge of graphical programming and javascript and combined that inside a fantastic coding playground p5. Using the tools of the p5 library I was able to code from scratch and JavaScript a working replica of Connect 4 that you can play in any web browser (that supports p5's coding environment).</div>
+                        <!-- <div id="expanded" class="project-description description-text">Total working time: 1 week</div> -->
+                        <div id="project-tags" class="project-tags"><span class="proj-tagsel">Computer</span>, <span class="proj-tagsel">Recreational</span></div>
+                        <div align="right" class="project-bottom-container">
+                            <div class="project-url"><a href="https://github.com/rpeepz/p5js_Connect4?tab=readme-ov-file#p5js_connect4">p5 Connect 4 README/</a></div>
+                            <div class="project-date">June 2023</div>
+                        </div>
+                    </div>
                       <div class="project">
                         <div class="project-title">This Website</div>
                         <div id="project-name" class="project-name">Portfolio and Online Resume</div>
