add recent work history

--- a/index.html
+++ b/index.html
@@ -191,6 +191,42 @@
                 <div class="expandable-section-expandedtext" id="expanded">
                     <span id="job-history-subheader">Sorted by start date, most recent first. May include volunteer positions and professional associations as noted. All references ok to contact.</span>
                     <!-- <span id="job-filter-text">Current Filter: *Custom*</span> -->
+                    </div>
+              
+                    <div class="job-entry">
+                        <span class="job-title">Mate / Engineer</span>
+                        <span class="job-employer">Riva - Iron Gryphon 100ft</span>
+                        <span class="job-employer-website"><a href="https://www.superyachttimes.com/yachts/iron-gryphon" target="_blank">https://www.superyachttimes.com/yachts/iron-gryphon/</a></span>
+                        <span class="job-date">July 2023 - November 2024</span>
+                        <span class="job-description">Full time Mate and Engineer operating in the Norhtern Biscayne Bay, Miami area.<br>Lead deck and engineering department. Perform routine and inspection and maintenance, keeping logs reporting to management. Assit in recruitment and subcontracting, manage records for crew, vendors, and vesel spending.</span>
+<!--WILL                <span class="job-reference">Will Nock, President Dayboard Mgt. Cell (954) 895-9460. <a href="mailto:Will@dayboardmgt.com">Will@dayboardmgt.com</a></span> -->
+                        <span class="job-reference">Carlos Mejia, Captain. Cell (954) 932-6718. <a href="mailto:CaptainCarlosMejia@icloud.com">CaptainCarlosMejia@icloud.com</a></span>
+                    </div>
+                 <div class="job-entry">
+                        <span class="job-title">Refit Engineer</span>
+                        <span class="job-employer">Moonen - Rearden Steel 120ft</span>
+                        <span class="job-employer-website"><a href="https://www.fraseryachts.com/en/yacht-for-sale/rearden-steel/" target="_blank">https://www.fraseryachts.com/en/yacht-for-sale/rearden-steel/</a></span>
+                        <span class="job-date">February 2023 - July 2023</span>
+                        <span class="job-description">3rd Engineer on a team refit project.<br>Colaborate and perform repairs or restorative tasks in all major departments; deck, hull, structure, mechanical and electrical.</span>
+<!--CHRISTIAN           <span class="job-reference">Christian ??, Chief Engineer. Cell (954) 932-6718</span> -->
+                    </div>
+                <div class="job-entry">
+                        <span class="job-title">Mate / Engineer</span>
+                        <span class="job-employer">Burger - Independence 114ft</span>
+                        <span class="job-employer-website"><a href="https://www.superyachttimes.com/yachts/independence-33m" target="_blank">https://www.superyachttimes.com/yachts/independence-33m</a></span>
+                        <span class="job-date">March 2022 - December 2022</span>
+                        <span class="job-description">Full time Mate and Engineer on board.<br>Oversaw all engineering operations, second to captain. Report and document technical conditions, perform maintenance, repairs and overhauls.<br>Managed recruitment of crew and vendors for seasonal operation and shipyard period.</span>
+                        <span class="job-reference">Daniel Sweigard, Engineering contractor. Cell (954) 552-5531</span>
+                    </div>
+                <div class="job-entry">
+                        <span class="job-title">Crossing Engineer</span>
+                        <span class="job-employer">Admiral - Safe Haven 123ft</span>
+                        <span class="job-employer-website"><a href="https://www.superyachttimes.com/yachts/safe-haven" target="_blank">https://www.superyachttimes.com/yachts/safe-haven</a></span>
+                        <span class="job-date">May 2021 - November 2021</span>
+                        <span class="job-description">Assistant Engineer to Chief Engineer, Robert Lukacevic crossing the Atlantic Ocean carried by DYT, Yacht Express (Dockwise)<br>Act as 2nd engineer during yard period at Astileros de Mallorca, Spain.</span>
+                        <span class="job-reference">Ben Whitlock, Captain. <a href="mailto:Captainwlock@yahoo.com">Captainwlock@yahoo.com</a></span>
+                        <span class="job-reference">Robert Lukacevic. Cell (954) 696-4514.</span>
+                    </div>
                     <div class="job-entry">
                         <span class="job-title">First Mate</span>
                         <span class="job-employer">Sunseeker - Full Circle 92ft</span>
