--- a/index.html
+++ b/index.html
@@ -462,7 +462,18 @@
                           </div>
                         </li>
                       </ul> -->
-
+                    
+                    <div class="project" data-tags="computer-science,graphics-games,recreational,web-development">
+                        <div class="project-title">One Piece War</div>
+                        <div id="project-name" class="project-name">Play Classic War with a pirate twist</div>
+                        <div id="expanded" class="project-description description-text">My first project of 2026, a game inspired by One Piece. Play war; The one with highest power wins. Randomly pit cards from your collection against others to see who will become king of the pirates. You cant go far without your crew, so fight and see who will win! Log in your your profile, or play as a guest in this showdown style battle area where you can play from just about anywhere. Made entirely by me and my laptop running visual stuido code and github copilot.</div>
+                        <div id="expanded" class="project-description description-text">Total working time: 1 day</div>
+                        <div id="project-tags" class="project-tags"><span class="proj-tagsel">Computer</span>, <span class="proj-tagsel">Recreational</span></div>
+                        <div align="right" class="project-bottom-container">
+                            <div class="project-url"><a href="./OnePieceGame.html" target="_blank">Play One Piece Card War</a></div>
+                            <div class="project-date">January 2026</div>
+                        </div>
+                    </div>
                     <div class="project" data-tags="computer-science,graphics-games,recreational">
                         <div class="project-title">Tetris!</div>
                         <div id="project-name" class="project-name">Play Tetris 4 made in JavaScript</div>
@@ -714,3 +725,4 @@
         </div>
     </body>
 </html>
+
