--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         <div id="expanded" class="project-description description-text">Total working time: 1 day</div>
                         <div id="project-tags" class="project-tags"><span class="proj-tagsel">Computer</span>, <span class="proj-tagsel">Recreational</span></div>
                         <div align="right" class="project-bottom-container">
-                            <div class="project-url"><a href="./OnePieceGame.html" target="_blank">Play One Piece Card War</a></div>
+                            <div class="project-url"><a href="./OnePiece/" target="_blank">Play One Piece Card War</a></div>
                             <div class="project-date">January 2026</div>
                         </div>
                     </div>
@@ -725,4 +725,5 @@
         </div>
     </body>
 </html>
+
 
