Add support links and footer to index.html

--- a/OnePiece/index.html
+++ b/OnePiece/index.html
@@ -50,6 +50,9 @@
                 <button id="submit-profile-btn" class="btn btn-primary">Submit</button>
                 <button id="cancel-btn" class="btn btn-secondary">Cancel</button>
             </div>
+            <a href="https://square.link/u/T6XoDQMr" target="_blank" class="support-link">
+                <button class="btn btn-support">☕ Buy Me a Coffee</button>
+            </a>
         </div>
     </div>
 
@@ -143,6 +146,9 @@
                 <button id="back-to-lobby-btn" class="btn btn-small">Back to Lobby</button>
             </div>
             <div class="filter-section">
+                <select id="saga-filter">
+                    <option value="all">All Sagas</option>
+                </select>
                 <select id="arc-filter">
                     <option value="all">All Arcs</option>
                 </select>
@@ -255,6 +261,9 @@
                 <div id="cards-won-grid" class="card-grid"></div>
             </div>
             <button id="return-lobby-btn" class="btn btn-primary">Return to Lobby</button>
+            <a href="https://square.link/u/T6XoDQMr" target="_blank" class="support-link">
+                <button class="btn btn-support">☕ Enjoyed the game? Support me!</button>
+            </a>
         </div>
     </div>
 
@@ -266,5 +275,11 @@
     <script src="js/main.js"></script>
     <!-- Scroll to Top Button -->
     <div id="scroll-top-btn" class="scroll-top"></div>
+    
+    <!-- Footer -->
+    <footer id="site-footer" class="site-footer">
+        <p id="version-info">v1.1</p>
+        <p class="credits">© 2026 One Piece Card War | One Piece © Eiichiro Oda</p>
+    </footer>
 </body>
 </html>
