--- a/OnePiece/index.html
+++ b/OnePiece/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Piece Card War v1.2</title>
+    <title>One Piece Card War v1.3</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
@@ -167,6 +167,17 @@
                     <input type="checkbox" id="owned-only-filter">
                     <span>Show Only Owned Cards</span>
                 </label>
+                <select id="rarity-filter" class="filter-select">
+                    <option value="all">All Rarities</option>
+                    <option value="SSS">SSS - Legendary</option>
+                    <option value="SS">SS - Mythic</option>
+                    <option value="S">S - Epic</option>
+                    <option value="A">A - Rare</option>
+                    <option value="B">B - Uncommon</option>
+                    <option value="C">C - Common</option>
+                    <option value="D">D - Basic</option>
+                    <option value="F">F - Starter</option>
+                </select>
             </div>
             <div id="collection-grid" class="card-grid"></div>
         </div>
